--- a/Project/index.html
+++ b/Project/index.html
@@ -28,6 +28,7 @@
               </li>
             </ul>
             <form class="d-flex" role="search">
+              <button type="button" class="btn btn-warning cartbutton"><i class="fa-solid fa-cart-shopping"></i></button>
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
@@ -36,14 +37,18 @@
       </nav>
 
 
-      <div id="card-container">
+      <div id="card-container" class="row row-cols-1 row-cols-md-3 g-4">
         
       </div>
 
+      <div id="cart-container">
+        <button id="closedButton">X</button>
+      </div>
 
      
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
+    <script src="https://kit.fontawesome.com/cbb1cd7957.js" crossorigin="anonymous"></script>
 </body>
 </html>
