--- a/Project/index.html
+++ b/Project/index.html
@@ -38,11 +38,12 @@
 
 
       <div id="card-container" class="row row-cols-1 row-cols-md-3 g-4">
-        
+        <img src="https://ninjasfiles.s3.amazonaws.com/asset_0000000000000020_1549743985_macbook_mouse.jpg">
       </div>
 
       <div id="cart-container">
         <button id="closedButton">X</button>
+        fjlafjljajfa
       </div>
 
      
