--- a/projects/01Bgchanger/index.html
+++ b/projects/01Bgchanger/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css">
+    <link href="style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
 <div class="btndiv">
-<button type="button" class="btn btn-primary">Primary</button>
-<button type="button" class="btn btn-secondary">Secondary</button>
-<button type="button" class="btn btn-success">Success</button>
-<button type="button" class="btn btn-danger">Danger</button>
-<button type="button" class="btn btn-warning">Warning</button>
-<button type="button" class="btn btn-info">Info</button>
-<button type="button" class="btn btn-light">Light</button>
-<button type="button" class="btn btn-dark">Dark</button>
+<button type="button" class="btn btn-primary" id="blue">blue</button>
+<button type="button" class="btn btn-secondary" id="grey">Secondary</button>
+<button type="button" class="btn btn-success"id="green">green</button>
+<button type="button" class="btn btn-danger"id="red">red</button>
+<button type="button" class="btn btn-warning"id="yelloe">yellow</button>
+<button type="button" class="btn btn-info"id="sky">Info</button>
+<button type="button" class="btn btn-light"id="white">white</button>
+<button type="button" class="btn btn-dark"id="black">black</button>
 </div>
     <script src="script.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
